[project]
name = "hnsw"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.6.1",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "numpy>=2.4.2",
    "pillow>=12.1.1",
    "pytest>=9.0.2",
    "requests>=2.32.5",
    "sentence-transformers>=5.2.3",
    "tqdm>=4.67.3",
    "transformers>=5.2.0",
]
